--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -58,6 +58,10 @@
   <ItemGroup>
     <Compile Include="Assets\Scripts\Player\Weapon.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerController.cs" />
+    <Compile Include="Assets\Scripts\Player\WeaponNew.cs" />
+    <Compile Include="Assets\Scripts\Player\Damagable.cs" />
+    <Compile Include="Assets\Scripts\Player\Projectile.cs" />
+    <Compile Include="Assets\Scripts\Player\ExplosiveBarrel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="UnityEngine">
