--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -45,12 +45,13 @@
      <Compile Include="Assets\Scripts\AI\AI Actions\AttackAction.cs" />
      <Compile Include="Assets\Scripts\Player\DamageController.cs" />
      <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveChip.cs" />
-     <Compile Include="Assets\Scripts\Enemies\Enemy.cs" />
+     <Compile Include="Assets\Scripts\Entities\Enemy.cs" />
      <Compile Include="Assets\Scripts\AI\AIDecision.cs" />
      <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveSlot.cs" />
      <Compile Include="Assets\Scripts\Player\DmgSegment.cs" />
      <Compile Include="Assets\Scripts\UI\ExtendedScene.cs" />
      <Compile Include="Assets\Scripts\UI\Window\Window.cs" />
+     <Compile Include="Assets\Scripts\Entities\Projectiles\Movement\ForwardProjectileMovement.cs" />
      <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\ArmorTrigger.cs" />
      <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\AgentLinkMover.cs" />
      <Compile Include="Assets\Scripts\AI\AI Modules\AIFlocking.cs" />
@@ -113,19 +114,21 @@
      <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\ArmorBrokenTrigger.cs" />
      <Compile Include="Assets\Scripts\Player\Rotateable.cs" />
      <Compile Include="Assets\NavMeshComponents\Assets\NavMeshComponents\Scripts\NavMeshModifierVolume.cs" />
-     <Compile Include="Assets\Scripts\Player\Projectile.cs" />
+     <Compile Include="Assets\Scripts\Entities\Projectiles\Projectile.cs" />
      <Compile Include="Assets\Scripts\AI\AI Modules\AIPatrolPoints.cs" />
      <Compile Include="Assets\Scripts\AI\AI Actions\FlockingAction.cs" />
      <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\DungeonManager.cs" />
      <Compile Include="Assets\NavMeshComponents\Assets\NavMeshComponents\Scripts\NavMeshSurface.cs" />
      <Compile Include="Assets\Scripts\AI\AI Modules\AITargetInRange.cs" />
      <Compile Include="Assets\Scripts\Items\Weapons\Weapon.cs" />
+     <Compile Include="Assets\Scripts\Entities\Projectiles\Collision\DefaultProjectileCollision.cs" />
      <Compile Include="Assets\Scripts\Player\Heatmeter.cs" />
      <Compile Include="Assets\Scripts\AI\AI Modules\AIFieldOfView.cs" />
      <Compile Include="Assets\Scripts\Interfaces\IShoot.cs" />
      <Compile Include="Assets\Scripts\Player\Moveable.cs" />
      <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\FreeCam.cs" />
      <Compile Include="Assets\Scripts\AI\AIDebugMessage.cs" />
+     <Compile Include="Assets\Scripts\Items\Weapons\ShootBehaviour\MultiShot.cs" />
      <Compile Include="Assets\Scripts\UI\Extensions\UISingleton.cs" />
      <Compile Include="Assets\Scripts\AI\AI Modules\AIInLineOfSight.cs" />
      <Compile Include="Assets\NavMeshComponents\Assets\NavMeshComponents\Scripts\NavMeshModifier.cs" />
@@ -134,6 +137,7 @@
      <Compile Include="Assets\Scripts\Player\DirLightDimmer.cs" />
      <Compile Include="Assets\Scripts\MapGeneration\HallWay.cs" />
      <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\HeatlevelPercentageTrigger.cs" />
+     <Compile Include="Assets\Scripts\Entities\Projectiles\Movement\ProjectileMovement.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerCore.cs" />
      <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveManager.cs" />
      <Compile Include="Assets\Scripts\AI\AIEvent.cs" />
@@ -144,7 +148,8 @@
      <Compile Include="Assets\Scripts\AI\AINavMeshGenerator.cs" />
      <Compile Include="Assets\Scripts\Player\OldScripts\WeaponNew.cs" />
      <Compile Include="Assets\Scripts\AI\AI Decisions\AITargetInRangeDecision.cs" />
-     <Compile Include="Assets\Scripts\Player\EntityStats.cs" />
+     <Compile Include="Assets\Scripts\Entities\EntityStats.cs" />
+     <Compile Include="Assets\Scripts\Entities\Projectiles\ProjectileStats.cs" />
      <Compile Include="Assets\Scripts\AI\AI Modules\AIRandomPatrol.cs" />
      <Compile Include="Assets\Scripts\AI\AI Modules\AILookToEnemy.cs" />
      <Compile Include="Assets\Scripts\Items\ItemContainer.cs" />
@@ -153,6 +158,7 @@
      <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\SpawnPrefabOnKeyDown.cs" />
      <Compile Include="Assets\Scripts\Player\PlayerInformation.cs" />
      <Compile Include="Assets\Scripts\AI\AI States\AIBaseState.cs" />
+     <Compile Include="Assets\Scripts\Entities\Projectiles\Collision\ProjectileCollision.cs" />
      <Compile Include="Assets\Scripts\MapGeneration\LevelGenerator.cs" />
      <Compile Include="Assets\Scripts\Global\ReferenceLib.cs" />
      <Compile Include="Assets\Scripts\Items\Weapons\WeaponManager.cs" />
