--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Assets\Scripts\UI\ExtendedScene.cs" />
     <Compile Include="Assets\Scripts\UI\Window\Window.cs" />
     <Compile Include="Assets\Scripts\Entities\Projectiles\Movement\ForwardProjectileMovement.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\ArmorTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Armor\ArmorTrigger.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\AgentLinkMover.cs" />
     <Compile Include="Assets\Scripts\UI\LoadingScreenUI.cs" />
     <Compile Include="Assets\Scripts\AI\AI Modules\AIFlocking.cs" />
@@ -78,7 +78,6 @@
     <Compile Include="Assets\Scripts\Items\Weapons\ShootBehaviour\ShotBehaviour.cs" />
     <Compile Include="Assets\Scripts\AI\AI States\AIState.cs" />
     <Compile Include="Assets\Scripts\Items\Item.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Upgrade.cs" />
     <Compile Include="Assets\Scripts\UI\Extensions\UIExtensions.cs" />
     <Compile Include="Assets\Scripts\MapGeneration\NormalRoom.cs" />
     <Compile Include="Assets\Scripts\MapGeneration\Room.cs" />
@@ -90,8 +89,8 @@
     <Compile Include="Assets\Scripts\Player\OldScripts\Old_Weapon.cs" />
     <Compile Include="Assets\Scripts\Player\CameraController.cs" />
     <Compile Include="Assets\Scripts\Inventory\Inventory.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\OverheatedTrigger.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\ArmorPercentageTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Heatmeter\OverheatedTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Armor\ArmorPercentageTrigger.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\RandomWalk.cs" />
     <Compile Include="Assets\Scripts\Effects\DamageText\DamageText.cs" />
     <Compile Include="Assets\Scripts\Inventory\InvBackground.cs" />
@@ -99,18 +98,17 @@
     <Compile Include="Assets\Scripts\Player\Test\TurretAI.cs" />
     <Compile Include="Assets\Scripts\AI\AI Actions\IdleAction.cs" />
     <Compile Include="Assets\Scripts\MapGeneration\BSPMap.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\HealPlayerODBehaviour.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\DebugOverdriveBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Behaviour\HealPlayerODBehaviour.cs" />
     <Compile Include="Assets\Scripts\AI\AI Decisions\AIInFieldOfViewDecision.cs" />
     <Compile Include="Assets\Scripts\AI\AIEventListener.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveBehaviour.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Behaviour\OverdriveBehaviour.cs" />
     <Compile Include="Assets\PlayerStatsUI.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\Oscillator.cs" />
     <Compile Include="Assets\Scripts\UI\PauseUI.cs" />
     <Compile Include="Assets\Scripts\AI\AI Actions\RandomPatrolAction.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\OverdriveTrigger.cs" />
     <Compile Include="Assets\Scripts\AI\AIFSMAgent.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\HealthTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Health\HealthTrigger.cs" />
     <Compile Include="Assets\Scripts\Effects\DamageText\SpawnDamageText.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\NavMeshSourceTag.cs" />
     <Compile Include="Assets\Scripts\Items\Upgrades\IEquipOverdriveChip.cs" />
@@ -127,13 +125,13 @@
     <Compile Include="Assets\Scripts\Items\Weapons\WeaponSlot.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\EnableIffSleeping.cs" />
     <Compile Include="Assets\Scripts\MapGeneration\BossRoom.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\HealthPercentageTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Health\HealthPercentageTrigger.cs" />
     <Compile Include="Assets\Scripts\UI\Window\WindowController.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\NavMeshComponents\Scripts\NavMeshLink.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\RandomInstancing.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\HeatlevelTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Heatmeter\HeatlevelTrigger.cs" />
     <Compile Include="Assets\Scripts\AI\AI Actions\PatrolAction.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\ArmorBrokenTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Armor\ArmorBrokenTrigger.cs" />
     <Compile Include="Assets\Scripts\Player\Rotateable.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\NavMeshComponents\Scripts\NavMeshModifierVolume.cs" />
     <Compile Include="Assets\Scripts\Entities\Projectiles\Projectile.cs" />
@@ -141,7 +139,7 @@
     <Compile Include="Assets\Scripts\AI\AI Actions\FlockingAction.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\DungeonManager.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\NavMeshComponents\Scripts\NavMeshSurface.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveFloatTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\OverdriveFloatTrigger.cs" />
     <Compile Include="Assets\Scripts\AI\AI Components\AITargetInRange.cs" />
     <Compile Include="Assets\Scripts\Items\Weapons\Weapon.cs" />
     <Compile Include="Assets\Scripts\Entities\Projectiles\Collision\DefaultProjectileCollision.cs" />
@@ -160,7 +158,7 @@
     <Compile Include="Assets\Scripts\Player\DirLightDimmer.cs" />
     <Compile Include="Assets\Scripts\Items\Weapons\IEquipWeapons.cs" />
     <Compile Include="Assets\Scripts\MapGeneration\HallWay.cs" />
-    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\HeatlevelPercentageTrigger.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Heatmeter\HeatlevelPercentageTrigger.cs" />
     <Compile Include="Assets\Scripts\Entities\Projectiles\Movement\ProjectileMovement.cs" />
     <Compile Include="Assets\Scripts\Player\PlayerCore.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IReturnEntityType.cs" />
