--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -198,6 +198,7 @@
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\DestroyOnTrigger.cs" />
     <Compile Include="Assets\Scripts\AI\AIController.cs" />
     <Compile Include="Assets\Scripts\Player\General\Door.cs" />
+    <Compile Include="Assets\Scripts\Player\General\DoorTrigger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
