--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -213,6 +213,8 @@
     <Compile Include="Assets\Scripts\AI\AI States\AIStateAction.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\DestroyOnTrigger.cs" />
     <Compile Include="Assets\Scripts\AI\AIController.cs" />
+    <Compile Include="Assets\Scripts\Player\General\PlayerRoomPosition.cs" />
+    <Compile Include="Assets\Scripts\Global\GlobalValues.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Assets\TextMesh Pro\Shaders\TMPro.cginc" />
