--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -92,7 +92,8 @@
     <Compile Include="Assets\Scripts\MapGeneration\PerlinNoiseGenerator.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\ClickToMove.cs" />
     <Compile Include="Assets\Scripts\Items\Weapons\ShootBehaviour\RapidFire.cs" />
-    <Compile Include="Assets\Scripts\UI\Animation\ButtonAnimationUI.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveIncreaseCritChanceEquipEffect.cs" />
+    <Compile Include="Assets\Scripts\UI\Animation\SelectableAnimationUI.cs" />
     <Compile Include="Assets\Scripts\Player\Test\EnemyShootingSimple.cs" />
     <Compile Include="Assets\Scripts\Entities\Projectiles\Collision\ExplosionCollision.cs" />
     <Compile Include="Assets\Scripts\Player\OldScripts\Old_Weapon.cs" />
@@ -146,6 +147,7 @@
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\EnableIffSleeping.cs" />
     <Compile Include="Assets\Scripts\MapGeneration\BossRoom.cs" />
     <Compile Include="Assets\Scripts\Player\General\DmgFlash.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveEffect.cs" />
     <Compile Include="Assets\Scripts\Entities\Pickupables\PickpupAction.cs" />
     <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\Health\HealthPercentageTrigger.cs" />
     <Compile Include="Assets\Scripts\UI\Window\WindowController.cs" />
@@ -171,6 +173,7 @@
     <Compile Include="Assets\FirstGearGames\Utilities\DDOL.cs" />
     <Compile Include="Assets\Scripts\Entities\Pickupables\Actions\RestoreHealthPickupAction.cs" />
     <Compile Include="Assets\Scripts\Items\Upgrades\Triggers\OverdriveFloatTrigger.cs" />
+    <Compile Include="Assets\Scripts\Entities\WeaponCompMulti.cs" />
     <Compile Include="Assets\Scripts\AI\AI Components\AITargetInRange.cs" />
     <Compile Include="Assets\Scripts\Entities\Pickupables\Pickupables.cs" />
     <Compile Include="Assets\Scripts\Items\Weapons\Weapon.cs" />
@@ -179,6 +182,7 @@
     <Compile Include="Assets\Scripts\AI\AI Components\AIFieldOfView.cs" />
     <Compile Include="Assets\FirstGearGames\SmoothCameraShaker\Scripts\Shakers\CameraShaker.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IShoot.cs" />
+    <Compile Include="Assets\Scripts\Items\Upgrades\OverdriveEquipEffect.cs" />
     <Compile Include="Assets\Scripts\Player\Moveable.cs" />
     <Compile Include="Assets\NavMeshComponents\Assets\Examples\Scripts\FreeCam.cs" />
     <Compile Include="Assets\Scripts\Interfaces\IReduceHeatlevel.cs" />
